UI: Optimize header layout - remove Live Feed bar and add GitHub link
- Removed 'Live Feed' header bar from LiveFeed.razor to save vertical space
- Added GitHub repository link to the right side of main header
- Styled GitHub link to match SLURPJOB branding (same font/size/color)
- GitHub link changes to orange (#ff9900) on hover for consistency

--- a/SlurpJob/Components/Pages/Dashboard.razor
+++ b/SlurpJob/Components/Pages/Dashboard.razor
@@ -14,6 +14,7 @@
 <div class="dashboard-container">
     <div class="dashboard-header">
         <div class="brand">SLURPJOB</div>
+        <a href="https://github.com/molnarriso/SlurpJob" target="_blank" class="github-link">GITHUB</a>
     </div>
 
     <div class="dashboard-top">
